# SDK-Android

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/: MiguAreaSDK2.1.1.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: app_config.json
app/src/main/assets/wakeres/: hotword1.irf  hotword2.irf  state_filler_3000s_kladi_1179.txt
app/src/main/cpp/ivw-jni/: com_iflytek_cyber_iot_show_core_ivw_IVWEngine.h  ivw-jni.cpp
app/src/main/res/anim/: setup_page_enter.xml  setup_page_exit.xml  setup_page_pop_enter.xml  setup_page_pop_exit.xml  setup_page_popup_enter.xml  slide_in_bottom.xml  slide_in_top.xml  slide_out_top.xml  slide_page_pop_exit.xml
app/src/main/res/anim-v21/: setup_page_enter.xml  setup_page_exit.xml  setup_page_pop_enter.xml  setup_page_pop_exit.xml  setup_page_popup_enter.xml  slide_in_bottom.xml  slide_in_right.xml  slide_in_top.xml  slide_out_right.xml  slide_out_top.xml  slide_page_pop_exit.xml
app/src/main/res/drawable/: bg_error_bar.xml  bg_next_step.xml  circle_accent.xml  ic_about_white_24dp.xml  ic_baseline_network.xml  ic_baseline_network_wifi_24px.xml  ic_baseline_wifi_error_24px.xml  ic_brightness_auto_white_24dp.xml  ic_brightness_low_white_24dp.xml  ic_equalizer.xml  ic_equalizer1_white_48dp.xml  ic_equalizer2_white_48dp.xml  ic_equalizer3_white_48dp.xml  ic_error_white_208dp.xml  ic_favorite_border_white_24dp.xml  ic_logo_color.xml  ic_logo_iat_white_32dp.xml  ic_logo_main_white_32dp.xml  ic_logo_white_48dp.xml  ic_next_white_24dp.xml  ic_pause_circle_outline_white_24dp.xml  (+20 more)
(+432 files in other folders)
